--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       >Home</a
     >
     <a
-      class="mx-1 my-1 flex max-w-sm gap-x-4 rounded-xl p-5 shadow-lg dark:shadow-none dark:-outline-offset-1 dark:outline-white/10 text-white hover:bg-slate-500 transition-colors"
+      class="mx-1 my-1 flex max- w-sm gap-x-4 rounded-xl p-5 shadow-lg dark:shadow-none dark:-outline-offset-1 dark:outline-white/10 text-white hover:bg-slate-500 transition-colors"
       href="#"
       >Logout</a
     >
@@ -157,7 +157,7 @@
     <p
       class="mx-1 my-1 flex max-w-sm gap-x-4 rounded-xl p-5 shadow-lg dark:shadow-none dark:-outline-offset-1 dark:outline-white/10 text-white hover:bg-slate-500 transition-colors"
     >
-      Contact:dr4gh1t@gmail.com
+      <a href="mailto:dr4gh1t@gmail.com">Contact:dr4gh1t@gmail.com</a>
     </p>
     <p
       class="mx-1 my-1 flex max-w-sm gap-x-4 rounded-xl p-5 shadow-lg dark:shadow-none dark:-outline-offset-1 dark:outline-white/10 text-white hover:bg-slate-500 transition-colors"
